--- a/oops_front/package.json
+++ b/oops_front/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "axios": "0.18.1",
-    "element-ui": "2.7.2",
+    "element-ui": "^2.12.0",
     "fuse.js": "^3.4.5",
     "js-cookie": "2.2.0",
+    "less-loader": "^5.0.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
@@ -44,6 +45,7 @@
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
+    "less": "^3.10.3",
     "mockjs": "1.0.1-beta3",
     "node-sass": "^4.9.0",
     "runjs": "^4.3.2",
